scripts/nullaway/wpi/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8.txt
../wpi/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/core/AcesHighCardComparator.java:27: error: [NullAway] dereferenced expression battleRanks.get(card1.getDenomination()) is @Nullable
        return battleRanks.get(card1.getDenomination()).compareTo(battleRanks.get(card2.getDenomination()));
                                                       ^
    (see http://t.uber.com/nullaway )
../wpi/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/core/DeckTest.java:83: error: [NullAway] passing @Nullable parameter '(Card) null' where @NonNull is required
        singleCardDeck.put((Card) null);
                           ^
    (see http://t.uber.com/nullaway )
../wpi/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/core/DeckDealer.java:47: error: [NullAway] dereferenced expression deck is @Nullable
        while (deck.hasCards()) {
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/core/DeckDealer.java:76: error: [NullAway] dereferenced expression deck is @Nullable
        final int deckSize = deck.size();
                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/battleroyale/Battle.java:207: error: [NullAway] dereferenced expression game.getGameCards() is @Nullable
        log.info("Giving spoils of " + game.getGameCards().size() + " cards to " + victor);
                                                          ^
    (see http://t.uber.com/nullaway )
../wpi/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/battleroyale/Battle.java:217: error: [NullAway] dereferenced expression game.getGameCards() is @Nullable
            game.getGameCards().put(battleCard.getCard());
                               ^
    (see http://t.uber.com/nullaway )
../wpi/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/battleroyale/Battle.java:243: error: [NullAway] dereferenced expression game.getGameCards() is @Nullable
            game.getGameCards().put(battler.getHand().drawUpTo(fee));
                               ^
    (see http://t.uber.com/nullaway )
../wpi/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/battleroyale/BattleRoyaleGame.java:145: error: [NullAway] dereferenced expression getGameCards() is @Nullable
        getGameCards().put(toBurn.getCard());
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/battleroyale/BattleRoyaleGame.java:148: error: [NullAway] dereferenced expression getCurrentBattle() is @Nullable
        getCurrentBattle().getBattleCards().set(getCurrentBattle().getBattleCards().indexOf(toBurn), newCard);
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/battleroyale/BattleRoyaleGame.java:225: error: [NullAway] unboxing of a @Nullable value
        return battlesByNbrOfContinuations.get(continuations);
                                              ^
    (see http://t.uber.com/nullaway )
../wpi/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/battleroyale/TwoBattlerAssessor.java:85: error: [NullAway] dereferenced expression battlers is @Nullable
        Preconditions.checkState(battlers.size() == 2);
                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/battleroyale/DefaultBattleAccessor.java:21: error: [NullAway] dereferenced expression battle.getBattlers() is @Nullable
        switch(battle.getBattlers().size()) {
                                   ^
    (see http://t.uber.com/nullaway )
../wpi/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/battleroyale/DefaultBattleAccessor.java:35: error: [NullAway] dereferenced expression battle.getBattlers() is @Nullable
        switch(battle.getBattlers().size()) {
                                   ^
    (see http://t.uber.com/nullaway )
../wpi/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/battleroyale/ThreeBattlerAssessor.java:113: error: [NullAway] dereferenced expression battlers is @Nullable
        Preconditions.checkState(battlers.size() == 3);
                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/doors/DenominationValuePolicy.java:16: error: [NullAway] dereferenced expression card is @Nullable
        return getValue(card.getDenomination());
                            ^
    (see http://t.uber.com/nullaway )
../wpi/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/doors/ColorValuePolicy.java:34: error: [NullAway] dereferenced expression card is @Nullable
        return getValue(card.getSuit().getColor());
                            ^
    (see http://t.uber.com/nullaway )
Note: ../wpi/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/battleroyale/DefaultBattleAccessorTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
16 errors
